--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
   --footer-text: #e7e9fc;
   --icon-color: #8e8f99;
   --success: #31d0aa;
-  --portfolio-card-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  --portfolio-card-animation: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 body {
@@ -123,15 +123,15 @@ header .container {
   color: var(--accent-color);
 }
 
-.site-nav-link{
+.site-nav-link {
   position: relative;
 }
 
-.site-nav-link::after{
+.site-nav-link::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -1px;
+  bottom: 0;
   width: 100%;
   height: 4px;
 
@@ -139,7 +139,7 @@ header .container {
   opacity: 0;
 }
 
-.site-nav-link.current::after{
+.site-nav-link.current::after {
   opacity: 1;
   background-color: var(--accent-color);
 }
@@ -168,7 +168,9 @@ header .container {
   display: block;
 
   color: var(--header-nav-color);
-  transition: color var(--portfolio-card-animation);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
 }
 
 .site-nav-link:hover,
@@ -183,7 +185,9 @@ header .container {
   display: block;
 
   color: var(--header-auth-color);
-  transition: color var(--portfolio-card-animation);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
 }
 
 .auth-nav-link:hover,
@@ -245,7 +249,9 @@ header .container {
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-  transition: background-color var(--portfolio-card-animation);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
 }
 
 .hero-btn:hover,
@@ -373,7 +379,9 @@ header .container {
   justify-content: center;
   align-items: center;
 
-  transition: background-color var(--portfolio-card-animation);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
 }
 
 .team-soc-link:hover,
@@ -420,12 +428,16 @@ header .container {
   border-radius: 4px;
 
   border: 1px solid #8e8f99;
-  transition: border var(--portfolio-card-animation);
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
 }
 
 .customers-icon {
   fill: var(--icon-color);
-  transition: fill var(--portfolio-card-animation);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
 }
 
 .customers-link:hover,
@@ -513,7 +525,9 @@ header .container {
   align-items: center;
 
   background-color: var(--body-color);
-  transition: background-color var(--portfolio-card-animation);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
 }
 
 .footer-soc-link:hover,
@@ -553,7 +567,9 @@ header .container {
 
   border-radius: 4px;
   border: 1px solid transparent;
-  transition: color var(--portfolio-card-animation), background-color var(--portfolio-card-animation);
+  transition-property: color, backgound-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
 }
 
 .filter-btn:hover,
@@ -571,10 +587,45 @@ header .container {
   column-gap: 24px;
 }
 
+.portfolio-item {
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
+}
+
 .portfolio-item:hover,
 .portfolio-item:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-item:hover .portfolio-top-text {
+  transform: translateY(0);
+}
+
+.portfolio-top-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-top-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  height: 100%;
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-left: 32px;
+
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: var(--portfolio-card-animation);
+
+  color: var(--main-btn-color);
+  background-color: var(--accent-color);
 }
 
 .portfolio-text-container {
@@ -600,4 +651,44 @@ header .container {
   letter-spacing: 0.02em;
 
   color: var(--body-color);
+}
+
+/* ------------------------MODAL------------------------------ */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition-property: opacity, visibility;
+  transition-duration: 250ms;
+}
+
+.modal {
+  width: 408px;
+  height: 576px;
+  background: #FCFCFC;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
